--- a/Iotrenetics/index.html
+++ b/Iotrenetics/index.html
@@ -59,7 +59,33 @@
       </div>
     </div>
   </section>
+  <!-- Products -->
+  <section class="products">
+    <div class="container">
+      <h2><span style="color: red;">Pro</span>duct Portfolio</h2>
+      <div class="grid">
+        <div class="card">Enerlytix – Smart Energy Management</div>
+        <div class="card">AquaMind – AI-Powered Water System</div>
+        <div class="card">Agentra – AI Teammates for Business</div>
+        <div class="card">Privora – Private LLM Platform</div>
+        <div class="card">VisiAI – Smart Video Analytics</div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Industries -->
+  <section class="industries">
+    <div class="container">
+      <h2><span style="color: red;">Ind</span>ustries We Serve</h2>
+      <div class="grid">
+        <div class="card">Healthcare & MedTech</div>
+        <div class="card">Industrial Automation</div>
+        <div class="card">Smart Cities</div>
+        <div class="card">Energy & Utilities</div>
+        <div class="card">Education & Training</div>
+      </div>
+    </div>
+  </section>
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
@@ -67,5 +93,6 @@
     </div>
   </footer>
 </body>
+
 
 </html>
