--- a/Iotrenetics/index.html
+++ b/Iotrenetics/index.html
@@ -39,7 +39,7 @@
   <!-- About Section -->
   <section class="about">
     <div class="container">
-      <h2><span style="color: red;">Abo</span>ut Us</h2>
+      <h2><span>Abo</span>ut Us</h2>
       <p>IoTrenetics Solutions Pvt. Ltd. is an innovative technology startup working at the intersection of IoT, AI,
         Generative AI, AR/VR, and Digital Transformation. Our mission is to build intelligent, connected, and
         sustainable systems that empower industries and communities to make smarter decisions.</p>
@@ -49,7 +49,7 @@
   <!-- Core Focus Areas -->
   <section class="focus">
     <div class="container">
-      <h2><span style="color: red;">Cor</span>e Focus Areas</h2>
+      <h2><span>Cor</span>e Focus Areas</h2>
       <div class="grid">
         <div class="card">IoT-Driven Automation</div>
         <div class="card">AI & Generative AI Solutions</div>
@@ -62,7 +62,7 @@
   <!-- Products -->
   <section class="products">
     <div class="container">
-      <h2><span style="color: red;">Pro</span>duct Portfolio</h2>
+      <h2><span>Pro</span>duct Portfolio</h2>
       <div class="grid">
         <div class="card">Enerlytix – Smart Energy Management</div>
         <div class="card">AquaMind – AI-Powered Water System</div>
@@ -76,7 +76,7 @@
   <!-- Industries -->
   <section class="industries">
     <div class="container">
-      <h2><span style="color: red;">Ind</span>ustries We Serve</h2>
+      <h2><span>Ind</span>ustries We Serve</h2>
       <div class="grid">
         <div class="card">Healthcare & MedTech</div>
         <div class="card">Industrial Automation</div>
@@ -96,3 +96,4 @@
 
 
 </html>
+
