--- a/Iotrenetics/index.html
+++ b/Iotrenetics/index.html
@@ -86,6 +86,29 @@
       </div>
     </div>
   </section>
+    <!-- Our Mission Section -->
+  <section class="mission">
+    <div class="container">
+      <h2><span style="color: red;">Our</span> Mission</h2>
+      <p>To empower businesses and communities by delivering cutting-edge IoT and AI-driven solutions that make the
+        world smarter, safer, and more connected.</p>
+      <div class="mission-grid">
+        <div class="mission-card">
+          <h3>🌍 Sustainability</h3>
+          <p>Building eco-friendly and energy-efficient technologies for a better tomorrow.</p>
+        </div>
+        <div class="mission-card">
+          <h3>🤖 Innovation</h3>
+          <p>Creating smart systems that learn, adapt, and transform industries through AI and IoT.</p>
+        </div>
+        <div class="mission-card">
+          <h3>💼 Collaboration</h3>
+          <p>Partnering with enterprises to bring digital transformation to life.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
@@ -96,3 +119,4 @@
 
 
 </html>
+
