--- a/Iotrenetics/index.html
+++ b/Iotrenetics/index.html
@@ -107,6 +107,32 @@
         </div>
       </div>
     </div>
+  <!-- Our Partners Section -->
+  <section class="partners">
+    <div class="container">
+      <h2><span style="color: red;">Our</span> Partners</h2>
+      <p>At <strong>IoTrenetics Solutions Pvt. Ltd.</strong>, we believe innovation thrives through collaboration.
+        We work closely with leading <strong>academic institutions, research labs, and industry partners</strong>
+        to co-develop intelligent, sustainable, and real-time digital solutions.</p>
+
+      <div class="partners-grid">
+        <div class="partner-card">
+          <h3>🏫 Academic Collaboration</h3>
+          <p>Joint research and innovation initiatives with universities and technology institutes to advance IoT–AI
+            integration.</p>
+        </div>
+        <div class="partner-card">
+          <h3>🏭 Industry Alliances</h3>
+          <p>Collaborating with manufacturing, healthcare, and automation sectors to develop scalable smart solutions.
+          </p>
+        </div>
+        <div class="partner-card">
+          <h3>🌐 Innovation Ecosystem</h3>
+          <p>Partnering with startups and R&D labs to foster digital transformation across India and Nepal.</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
@@ -117,4 +143,5 @@
 
 
 </html>
+
 
