--- a/Iotrenetics/index.html
+++ b/Iotrenetics/index.html
@@ -39,7 +39,7 @@
   <!-- About Section -->
   <section class="about">
     <div class="container">
-      <h2><span style="color: red;">Abo</span>ut Us</h2>
+      <h2><span>Abo</span>ut Us</h2>
       <p>IoTrenetics Solutions Pvt. Ltd. is an innovative technology startup working at the intersection of IoT, AI,
         Generative AI, AR/VR, and Digital Transformation. Our mission is to build intelligent, connected, and
         sustainable systems that empower industries and communities to make smarter decisions.</p>
@@ -49,7 +49,7 @@
   <!-- Core Focus Areas -->
   <section class="focus">
     <div class="container">
-      <h2><span style="color: red;">Cor</span>e Focus Areas</h2>
+      <h2><span>Cor</span>e Focus Areas</h2>
       <div class="grid">
         <div class="card">IoT-Driven Automation</div>
         <div class="card">AI & Generative AI Solutions</div>
@@ -62,7 +62,7 @@
   <!-- Products -->
   <section class="products">
     <div class="container">
-      <h2><span style="color: red;">Pro</span>duct Portfolio</h2>
+      <h2><span>Pro</span>duct Portfolio</h2>
       <div class="grid">
         <div class="card">Enerlytix – Smart Energy Management</div>
         <div class="card">AquaMind – AI-Powered Water System</div>
@@ -76,7 +76,7 @@
   <!-- Industries -->
   <section class="industries">
     <div class="container">
-      <h2><span style="color: red;">Ind</span>ustries We Serve</h2>
+      <h2><span>Ind</span>ustries We Serve</h2>
       <div class="grid">
         <div class="card">Healthcare & MedTech</div>
         <div class="card">Industrial Automation</div>
@@ -133,6 +133,18 @@
       </div>
     </div>
   </section>
+<!-- CTA Section -->
+<section class="cta">
+  <div class="container">
+    <h2>Let's Build the Future Together</h2>
+    <p>Partner with <strong>IoTrenetics Solutions Pvt. Ltd.</strong> to innovate, automate, and accelerate your business transformation journey.  
+    From AI-driven automation to IoT-based intelligence — we help you create smart, scalable, and future-ready solutions.</p>
+    <div class="cta-buttons">
+      <a href="#" class="btn-primary">Get in Touch</a>
+      <a href="#" class="btn-secondary">Explore Our Solutions</a>
+    </div>
+  </div>
+</section>
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
@@ -143,5 +155,6 @@
 
 
 </html>
+
 
 
